--- a/views/index.html
+++ b/views/index.html
@@ -17,11 +17,11 @@
         <div class="form-group">
           <label for="sender-input" class="col-sm-2 control-label">From</label>
           <div class="col-sm-10">
-            <input type="email" class="form-control" id="sender-input" placeholder="Enter email" name="sender">
+            <input type="email" class="form-control" id="sender-input" placeholder="Enter email" name="from">
           </div>
           <label for="recipients-input" class="col-sm-2 control-label">To</label>
           <div class="col-sm-10">
-            <input type="email" class="form-control" id="recipients-input" placeholder="Enter email" name="recipients">
+            <input type="email" class="form-control" id="recipients-input" placeholder="Enter email" name="to">
             <p class="help-block">Separate multiple recipients with whitespace.</p>
           </div>
           <label for="cc-input" class="col-sm-2 control-label">CC</label>
