--- a/views/index.html
+++ b/views/index.html
@@ -17,30 +17,30 @@
         <div class="form-group">
           <label for="sender-input" class="col-sm-2 control-label">From</label>
           <div class="col-sm-10">
-            <input type="email" class="form-control" id="sender-input" placeholder="Enter email" name="from">
+            <input type="text" class="form-control" id="sender-input" placeholder="Enter email" name="from" required="true">
           </div>
           <label for="recipients-input" class="col-sm-2 control-label">To</label>
           <div class="col-sm-10">
-            <input type="email" class="form-control" id="recipients-input" placeholder="Enter email" name="to">
+            <input type="text" class="form-control" id="recipients-input" placeholder="Enter email" name="to" required="true">
             <p class="help-block">Separate multiple recipients with whitespace.</p>
           </div>
           <label for="cc-input" class="col-sm-2 control-label">CC</label>
           <div class="col-sm-10">
-            <input type="email" class="form-control" id="cc-input" placeholder="Enter email" name="cc">
+            <input type="text" class="form-control" id="cc-input" placeholder="Enter email" name="cc">
           </div>
           <label for="bcc-input" class="col-sm-2 control-label">BCC</label>
           <div class="col-sm-10">
-            <input type="email" class="form-control" id="bcc-input" placeholder="Enter email" name="bcc">
+            <input type="text" class="form-control" id="bcc-input" placeholder="Enter email" name="bcc">
           </div>
         </div>
         <div class="form-group">
           <label for="subject-input" class="col-sm-2 control-label">Subject</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="subject-input" placeholder="Enter email" name="subject">
+            <input type="text" class="form-control" id="subject-input" placeholder="Enter email" name="subject" required="true">
           </div>
           <label for="body-input" class="col-sm-2 control-label">Body</label>
           <div class="col-sm-10">
-            <textarea name="body" id="body-input" class="form-control" placeholder="Enter the email body here"></textarea>
+            <textarea name="body" id="body-input" class="form-control" placeholder="Enter the email body here" required="true"></textarea>
           </div>
         </div>
         <div class="form-group">
